Fix cropping issue with custom scrollbar in Stafari

--- a/components/wrappers/CustomScrollbar/custom-scrollbar.scss
+++ b/components/wrappers/CustomScrollbar/custom-scrollbar.scss
@@ -3,5 +3,7 @@
 
 // -------------------------| Root
 .root {
-  //
+  &:not(:global(.ps)) {
+    position: static;
+  }
 }
